--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "build": "zsh -c 'esbuild ./src/**/*.ts --outdir=dist --target=es6'",
-    "start": "zsh -c 'esbuild ./src/**/*.ts --outdir=dist --target=es6 --watch'"
+    "build": "tsc",
+    "start": "tsc --watch"
   },
   "keywords": [],
   "author": "Bruno Luiz da Silva <contact@brunoluiz.net> (http://brunoluiz.net/)",
@@ -32,10 +32,10 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.165",
-    "esbuild": "^0.8.51",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.2",
+    "typescript": "^4.2.2"
   },
   "files": [
     "dist"
