--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
+    "outDir": "dist",
     "target": "es6",
     "sourceMap": true,
     "declaration": true,
