--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.165",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "eslint": "^7.21.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^2.0.2",
