rename to remota

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@concordalabs/conversa",
+  "name": "@concordalabs/remota",
   "version": "0.2.0",
   "description": "",
   "browser": {
