fix: package.json exports

--- a/package.json
+++ b/package.json
@@ -3,17 +3,10 @@
   "version": "0.3.0",
   "description": "",
   "browser": {
-    ".": "./dist/index.js",
-    "./daemon": "./dist/daemon.js",
-    "./ui": "./dist/ui/index.js",
-    "./client": "./dist/client/index.js",
-    "./server": "./dist/server/index.js"
+    ".": "./dist/index.js"
   },
   "exports": {
-    ".": "./dist/index.js",
-    "./ui": "./dist/index.js",
-    "./client": "./dist/client.js",
-    "./server": "./dist/server.js"
+    ".": "./dist/index.js"
   },
   "main": "./dist/index.js",
   "scripts": {
