--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:esbuild": "esbuild ./src/remota.js  --outfile=./dist/remota.min.js --target=es6 --bundle --minify --sourcemap",
     "watch:tsc": "npm run build:tsc -- --watch",
     "watch:esbuild": "esbuild ./src/remota.js  --outfile=./dist/remota.js --target=es6 --bundle --sourcemap --serve",
+    "watch:docs": "typedoc src/index.ts --watch",
     "prepublishOnly": "npm run build"
   },
   "keywords": [],
@@ -24,7 +25,8 @@
   "dependencies": {
     "eventemitter3": "^4.0.7",
     "robust-websocket": "^1.0.0",
-    "rrweb-snapshot": "^1.1.1"
+    "rrweb-snapshot": "^1.1.1",
+    "typedoc": "^0.20.34"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.16.1",
