--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "build": "npm run build:tsc && npm run build:esbuild",
+    "build": "npm run build:tsc && npm run build:esbuild && npm run build:docs",
     "build:tsc": "tsc",
     "build:esbuild": "esbuild ./src/remota.js  --outfile=./dist/remota.min.js --target=es6 --bundle --minify --sourcemap",
-    "build:doc": "typedoc --options ./.typedoc.json",
+    "build:docs": "typedoc --options ./typedoc.json",
     "watch:tsc": "npm run build:tsc -- --watch",
     "watch:esbuild": "esbuild ./src/remota.js  --outfile=./dist/remota.js --target=es6 --bundle --sourcemap --serve",
     "watch:docs": "npm run build:doc -- --watch",
-    "prepublishOnly": "npm run build"
+    "publish:docs": "gh-pages -d docs",
+    "prepublishOnly": "npm run build",
+    "postpublish": "npm run publish:docs"
   },
   "keywords": [],
   "author": "Bruno Luiz da Silva <contact@brunoluiz.net> (http://brunoluiz.net/)",
@@ -26,8 +28,7 @@
   "dependencies": {
     "eventemitter3": "^4.0.7",
     "robust-websocket": "^1.0.0",
-    "rrweb-snapshot": "^1.1.1",
-    "typedoc": "^0.20.34"
+    "rrweb-snapshot": "^1.1.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -36,7 +37,9 @@
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.0.2",
+    "typedoc": "^0.20.34",
     "typescript": "^4.2.2"
   },
   "files": [
